[tool.poetry]
name = "ibs"
version = "0.0.0"
description = "<Enter a one-sentence description of this project here.>"
authors = ["Tom Mertens <your.email@whatev.er>"]
license = "MIT"

readme = 'README.rst'

repository = "https://github.com/tomerten/ibs"
homepage = "https://github.com/tomerten/ibs"

keywords = ['packaging', 'poetry']

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
pytest = "^4.4.2"

[tool.poetry.scripts]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
