[tool.poetry]
name = "ibs"
version = "0.0.0"
description = "<Enter a one-sentence description of this project here.>"
authors = ["Tom Mertens <your.email@whatev.er>"]
license = "MIT"

readme = 'README.rst'

repository = "https://github.com/tomerten/ibs"
homepage = "https://github.com/tomerten/ibs"

build = "build.py"

keywords = ['packaging', 'poetry']

[tool.poetry.dependencies]
python = "^3.7.1"
matplotlib = "^3.4.2"
Jinja2 = "^3.0.1"
click = "^7.0.0"
setuptools-cpp = "^0.1.0"
pandas = "^1.3.0"
numpy = "^1.21.0"
ipykernel = "^6.0.1"
jupyter-contrib-nbextensions = "^0.5.1"
cpymad = "^1.8.1"

[tool.poetry.dev-dependencies]
pytest = "^4.4.2"
mypy = "^0.910"

[tool.poetry.scripts]
runode = "ibs:cli_runode.main"

[build-system]
requires = ["poetry>=0.12", "wheel", "setuptools-cpp"]
build-backend = "poetry.masonry.api"
